--- a/gestorInternet.vcxproj
+++ b/gestorInternet.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,7 +128,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="facturacion.cpp" />
+    <ClCompile Include="gestionClientes.cpp" />
+    <ClCompile Include="gestionComputadoras.cpp" />
+    <ClCompile Include="gestionSesiones.cpp" />
     <ClCompile Include="gestorInternet.cpp" />
+    <ClCompile Include="interface.cpp" />
+    <ClCompile Include="reportes.cpp" />
+    <ClCompile Include="reservas.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="facturacion.h" />
+    <ClInclude Include="gestionClientes.h" />
+    <ClInclude Include="gestionComputadoras.h" />
+    <ClInclude Include="gestionSesiones.h" />
+    <ClInclude Include="interface.h" />
+    <ClInclude Include="reportes.h" />
+    <ClInclude Include="reservas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
