--- a/gestorInternet.vcxproj
+++ b/gestorInternet.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="interface.cpp" />
     <ClCompile Include="reportes.cpp" />
     <ClCompile Include="reservas.cpp" />
+    <ClCompile Include="tempFile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="facturacion.h" />
@@ -145,6 +146,7 @@
     <ClInclude Include="interface.h" />
     <ClInclude Include="reportes.h" />
     <ClInclude Include="reservas.h" />
+    <ClInclude Include="tempFile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
