added computer manager sub menu (complete), need nose finishing touches tho

--- a/gestorInternet.vcxproj.filters
+++ b/gestorInternet.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="tempFile.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="global.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
