--- a/gestorInternet.vcxproj
+++ b/gestorInternet.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="gestionClientes.h" />
     <ClInclude Include="gestionComputadoras.h" />
     <ClInclude Include="gestionSesiones.h" />
+    <ClInclude Include="global.h" />
     <ClInclude Include="interface.h" />
     <ClInclude Include="reportes.h" />
     <ClInclude Include="reservas.h" />
